--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@elysiajs/bearer": "^1.4.2",
     "@elysiajs/cors": "^1.4.1",
     "@elysiajs/jwt": "^1.4.0",
+    "@elysiajs/swagger": "^1.3.1",
     "@supabase/supabase-js": "^2.90.1",
     "bcrypt": "^6.0.0",
     "elysia": "^1.2.0-rc.3",
